--- a/src/view/untMainCleanCode.fmx
+++ b/src/view/untMainCleanCode.fmx
@@ -9,4 +9,28 @@ object Form1: TForm1
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   DesignerMasterStyle = 0
+  object Button1: TButton
+    Position.X = 160.000000000000000000
+    Position.Y = 176.000000000000000000
+    TabOrder = 2
+    Text = 'Button1'
+    TextSettings.Trimming = None
+    OnClick = Button1Click
+  end
+  object Button2: TButton
+    Position.X = 248.000000000000000000
+    Position.Y = 176.000000000000000000
+    TabOrder = 1
+    Text = 'Button1'
+    TextSettings.Trimming = None
+    OnClick = Button2Click
+  end
+  object Button3: TButton
+    Position.X = 336.000000000000000000
+    Position.Y = 176.000000000000000000
+    TabOrder = 0
+    Text = 'Button1'
+    TextSettings.Trimming = None
+    OnClick = Button3Click
+  end
 end
